--- a/charts/joplin-server/Chart.yaml
+++ b/charts/joplin-server/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
-name: joplinserver
+name: joplin-server
 description: Joplin server
-version: 0.2.0
+version: 0.2.1
 appVersion: "3.3.3-beta"
 type: application
 home: https://joplinapp.org
