--- a/charts/joplin-server/Chart.yaml
+++ b/charts/joplin-server/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 name: joplin-server
 description: Joplin server
-version: 0.2.2
-appVersion: "3.3.4-beta"
+version: 0.2.3
+appVersion: "3.3.13"
 type: application
 home: https://joplinapp.org
 icon: https://github.com/laurent22/joplin/raw/refs/heads/dev/Assets/JoplinIcon.svg
