--- a/charts/joplin-server/values.yaml
+++ b/charts/joplin-server/values.yaml
@@ -12,7 +12,7 @@ server:
   image:
     registry: docker.io
     repository: joplin/server
-    tag: 3.3.4-beta
+    tag: 3.3.13
     pullPolicy: IfNotPresent
     pullSecrets: []
     debug: false
